解答小程序备案、域名解析及海外预览方案

--- a/miniprogram-7/miniprogram/pages/login/login.wxml
+++ b/miniprogram-7/miniprogram/pages/login/login.wxml
@@ -73,7 +73,9 @@
   <text class="other-text">Or continue with</text>
   <view class="icons">
     <view class="icon">G</view>
-    <view class="icon" bindtap="onWxSignIn">W</view>
+    <view class="icon" bindtap="onWxSignIn">
+      <image class="wx-icon-img" src="/images/weixin.png" mode="aspectFit"></image>
+    </view>
   </view>
 </view>
 
