--- a/miniprogram-7/miniprogram/pages/explore_Card/index.wxss
+++ b/miniprogram-7/miniprogram/pages/explore_Card/index.wxss
@@ -93,7 +93,7 @@ page {
   /* --- 主卡片 (无歪斜) --- */
   .main-card {
     width: 100%;
-    height: 800rpx;
+    height: auto;
     background: linear-gradient(135deg, #42dfd8 0%, #b363bb 100%);
     border-radius: 48rpx;
     padding: 40rpx;
